[package]
name = "rainfall"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainfall"
path = "src/lib.rs"

[[bin]]
name="server"
path = "bin/server.rs"

[[bin]]
name="client"
path = "bin/client.rs"

[[bin]]
name="test"
path = "bin/test.rs"


[[bench]]
name = "my_benchmark"
harness = false 

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
bincode = "1.3.3"
blake3 = {version="1.5.1", features = ["serde"]}
blst = "0.3.12"
core_affinity = "0.8.1"
criterion = "=0.5.1"
ctrlc = "3.4.4"
libc = "0.2.155"
rand = "0.8.5"
serde = {version = "1.0.204", features = ["derive"]}
